[workspace]
resolver = "2"
members = ["master", "net_interface", "node"]

[workspace.dependencies]
master = { path = "./master" }
node = { path = "./node" }
net_interface = { path = "./net_interface" }

rand = { version = "0.8.5" }
prost = { version = "0.13" }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.16" }
tonic = { version = "0.12.2" }
tonic-build = { version = "0.12" }
tower-http = { version = "0.5.2", features = ["fs"] }
