[package]
name = "master"
version = "0.1.0"
edition = "2021"

[dependencies]
net_interface.workspace = true

axum.workspace = true 
bincode.workspace = true
clap.workspace = true
sled.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tokio.workspace = true
tower-http.workspace = true
