[package]
name = "net_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
rand.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[build-dependencies]
tonic-build.workspace = true
